# therion-studio

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CODE_OPTIMALIZATION.md  GUI_CLEANUP.md  QtReimplementationSpecification.md  README.md  REFACTOR_CLAUDE.md  REVIEW_CODEX.md  SPECIFICATION.md  TODO.md  WORKLOG.md  WORKLOG_ARCHIVE_2026-05-13.md  WORKLOG_ARCHIVE_2026-05-23.md
.claude/: settings.local.json
.github/workflows/: build-and-test.yml  build-linux.yml  build-macos.yml  build-windows.yml  linux-packages.yml  windows-installer.yml
cmake/linux/: TherionStudio.desktop.in  TherionStudio.metainfo.xml.in
cmake/macos/: Info.plist.in
cmake/windows/: TherionStudio.rc.in
docs/: BUILDING.md  ENCODING_QA_CHECKLIST.md  LOCALIZATION.md  RELEASING.md  THERION_COMMAND_CATALOG_PIPELINE.md  THERION_COMPATIBILITY.md  THIRD_PARTY_NOTICES.md  USER_MANUAL.cs.md  USER_MANUAL.md  USER_MANUAL.sk.md
docs/releases/: 2026.6.4.md  2026.6.5.md  2026.6.6.md  2026.6.7.md  2026.6.8.md
packaging/homebrew/: README.md
packaging/linux/: README.md
packaging/windows/: README.md
plans/: 3D_VIEWER_PLAN.md  GUI_CLEANUP.md  REVIEW_CODEX.md  UNIFIED_SOURCE_DOM_PLAN.md
resources/: map_object_styles.json  therion_command_catalog.json  therion_command_catalog.overrides.json  therion_help_metadata.json  therion_syntax_palette.json
resources/app/: TherionStudio.icns
resources/map_object_styles/: area.blocks.json  area.clay.json  area.debris.json  area.ice.json  area.json  area.mudcrack.json  area.pebbles.json  area.sand.json  area.snow.json  area.sump.json  area.water.json  line.border.invisible.json  line.border.json  line.border.presumed.json  line.border.temporary.json  line.ceiling-step.json  line.chimney.json  line.fixed-ladder.json  line.handrail.json  line.json  line.label.json  line.moonmilk.json  line.overhang.json  line.pit.json  line.rock-border.json  line.rock-edge.json  line.rope-ladder.json  line.slope.json  line.steps.json  line.survey.cave.json  line.survey.surface.json  line.wall.blocks.json  line.wall.clay.json  line.wall.debris.json  line.wall.flowstone.json  line.wall.ice.json  line.wall.invisible.json  line.wall.json  line.wall.pebbles.json  line.wall.presumed.json  (+15 more)
resources/therion_catalog/: README.md
scripts/: check_localization.py  check_structure_constraints.py  check_therion_catalog.sh  generate_therion_catalog.py  prepare_linux_appimage_appdir.sh  refresh_therion_catalog.sh  update_thbook_snapshot.sh  verify_install_layout.py  verify_linux_release_artifacts.py  verify_windows_installer_artifact.py
scripts/linux-packages/: build_and_smoke_packages_docker.sh  build_appimage_package.sh  build_appimage_package_docker.sh  build_deb_package.sh  build_deb_package_docker.sh  prepare_appimage_appdir.sh  smoke_appimage_package.sh  smoke_appimage_package_docker.sh  smoke_deb_package.sh  smoke_deb_package_docker.sh  verify_release_artifacts.py
src/: main.cpp
src/app/: ApplicationStylePolicy.h  LucideIconFactory.h  MainWindow.cpp  MainWindow.h  MainWindowDocumentController.cpp  MainWindowDocumentController.h  MainWindowDocumentFileWatcher.cpp  MainWindowDocumentHelpers.cpp  MainWindowDocumentHelpers.h  MainWindowDocumentOpenController.cpp  MainWindowDocumentOpenController.h  MainWindowDocumentTabOpenController.cpp  MainWindowDocumentTabOpenController.h  MainWindowFileOpen.cpp  MainWindowHelpDialog.cpp  MainWindowHelpDialog.h  MainWindowHelpDocument.cpp  MainWindowHelpDocument.h  MainWindowInspector.cpp  MainWindowMapBackground.cpp  MainWindowProjectBrowserSidebar.cpp  MainWindowProjectController.cpp  MainWindowProjectController.h  MainWindowProjectFileWatcher.cpp  MainWindowProjectLifecycle.cpp  MainWindowProjectLifecycleService.cpp  MainWindowProjectLifecycleService.h  MainWindowProjectOrchestrationService.cpp  MainWindowProjectOrchestrationService.h  MainWindowProjectStepExecutor.cpp  MainWindowProjectStepExecutor.h  MainWindowProjectTemplate.cpp  MainWindowProjectUiFlowService.cpp  MainWindowProjectUiFlowService.h  MainWindowProjectWorkspaceService.cpp  MainWindowProjectWorkspaceService.h  MainWindowRecentFilesService.cpp  MainWindowRecentFilesService.h  MainWindowRecentProjectsService.cpp  MainWindowRecentProjectsService.h  (+83 more)
src/core/: CommandCatalogService.cpp  CommandCatalogService.h  (+51 more)
tests/: ApplicationIdentityTest.cpp  BlockEditorApplyExecutorTest.cpp  BlockEditorCanvasRebuildControllerTest.cpp  BlockEditorDocumentOutlineBuilderTest.cpp  BlockEditorMoveSourceRewriterTest.cpp  BlockEditorToolboxControllerTest.cpp  CommandCatalogServiceTest.cpp  CommandCatalogStoreTest.cpp  CommandOptionParserTest.cpp  DocumentFileEncodingTest.cpp  FakeSessionStore.h  MainWindowDocumentControllerTest.cpp  MainWindowDocumentOpenControllerTest.cpp  MainWindowDocumentTabOpenControllerTest.cpp  MainWindowHelpDocumentTest.cpp  MainWindowProjectControllerTest.cpp  MainWindowProjectLifecycleServiceTest.cpp  MainWindowProjectOrchestrationServiceTest.cpp  MainWindowProjectStepExecutorTest.cpp  MainWindowProjectUiFlowServiceTest.cpp  MainWindowProjectWorkspaceServiceTest.cpp  MainWindowRecentFilesServiceTest.cpp  MainWindowRecentProjectsServiceTest.cpp  MainWindowServiceQTestMain.cpp  MainWindowSessionControllerTest.cpp  MainWindowSessionDocumentControllerTest.cpp  MainWindowSessionDocumentServiceTest.cpp  MainWindowSessionProjectServiceTest.cpp  MainWindowSessionRestoreOrchestrationServiceTest.cpp  MainWindowSessionRestoreStepExecutorTest.cpp  MainWindowSessionRestoreUiFlowServiceTest.cpp  MainWindowSessionStateServiceTest.cpp  MainWindowSessionWindowRestoreServiceTest.cpp  MainWindowStructureNameOverridesServiceTest.cpp  MainWindowTherionRunnerControllerTest.cpp  MainWindowValidationFixApplyServiceTest.cpp  MapBackgroundPlacementTest.cpp  MapEditorAreaReferenceResolverTest.cpp  MapEditorBackgroundLayerVisibilityTest.cpp  MapEditorCanvasEditSourceTransactionTest.cpp  (+66 more)
tools/: MapObjectStyleGallery.cpp
translations/: therion_studio_cs.ts  therion_studio_de.ts  therion_studio_es.ts  therion_studio_fr.ts  therion_studio_it.ts  therion_studio_pt.ts  therion_studio_sk.ts
(+469 files in other folders)
